src/test/compile-fail/unbalanced-comment.rs
// -*- rust -*-

/*
 * This is an un-balanced /* multi-line comment.
 */

fn main() {
  log "hello, world.";
}
